manifests/tailscale/webfinger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webfinger-server
  namespace: tailscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webfinger-server
  template:
    metadata:
      labels:
        app: webfinger-server
    spec:
      containers:
      - name: nginx
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: webfinger-file
          mountPath: /usr/share/nginx/html/.well-known
          readOnly: true
      volumes:
      - name: webfinger-file
        configMap:
          name: webfinger-json
---
apiVersion: v1
kind: Service
metadata:
  name: webfinger-service
  namespace: tailscale
spec:
  selector:
    app: webfinger-server
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webfinger-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - seanchoo.top
    secretName: webfinger-tls
  rules:
    - host: "seanchoo.top"
      http:
        paths:
          - path: /.well-known/webfinger
            pathType: Exact 
            backend:
              service:
                name: webfinger-service
                port:
                  number: 80
